--- a/minesweeper.conf
+++ b/minesweeper.conf
@@ -8,6 +8,8 @@ start on (net-device-up
 stop on runlevel [06]
 respawn
 
+env MINESWEEPER_GOOGLE_API_KEY=""
+
 script
     exec 2>>/dev/.initramfs/minesweeper.log
     set -x
