run as minesweeper user

--- a/minesweeper.conf
+++ b/minesweeper.conf
@@ -15,5 +15,5 @@ script
     set -x
     chdir /usr/local/bin
     exec >/var/log/minesweeper.log 2>&1
-    exec /usr/local/bin/minesweeper 
+    exec sudo -Eu minesweeper /usr/local/bin/minesweeper
 end script
