--- a/dev.yml
+++ b/dev.yml
@@ -7,3 +7,7 @@ commands:
   build:
     run: godep go build
     desc: 'build the project'
+
+packages:
+  - git@github.com:Shopify/dev-shopify.git
+
